--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-.App {
+/* .App {
   display: flex;
   flex-direction: row;
   justify-content: center;
  align-items: center;
  height: 100vh;
   background-color: rgb(11, 133, 240);
-}
+} */
