--- a/src/style/gallery-card3.css
+++ b/src/style/gallery-card3.css
@@ -1,4 +1,4 @@
-.gallery-card3-gallery-card {
+/* .gallery-card3-gallery-card {
     width: 100%;
     height: 300px;
     display: flex;
@@ -42,4 +42,4 @@
   
   
   
-  
+   */
