--- a/src/style/signin.css
+++ b/src/style/signin.css
@@ -1,11 +1,11 @@
-.body{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-       align-items: center;
+.mains{
+       background-color: rgb(9, 106, 225);
+       width: 100%;
        height: 100vh;
-        background-color: rgb(15, 125, 222);
-      
+      display: flex;
+      display: flex;
+      align-items: center;
+        justify-content: center;
       
 }
 .container{
@@ -19,7 +19,7 @@
     flex-direction: column;
     border-radius: 5px;
     background-color: rgb(255, 255, 255);
-    box-shadow: rgb(3, 43, 92) 0px 3px 3px 3px;
+    box-shadow: rgb(191, 200, 210) 0px 3px 3px 3px;
 }
 .logo{
     border: 2px solid #000000;
@@ -31,7 +31,7 @@
     background-image: url("https://th.bing.com/th/id/OIP.HHVUf3TYqncgpJXyCMmxyAHaHa?rs=1&pid=ImgDetMain");
   background-size: cover; 
 }
-.title{
+.titles{
    font-size: 24px;
     height: 5vh;
     width: 20%;
@@ -40,7 +40,7 @@
     margin-bottom: 3vh;
     text-align: center;
 }
-input{
+.inputs{
   width: 60%;
   margin:2vh;
   align-self: center;
@@ -49,7 +49,7 @@ input{
   border-radius: 5px;
 }
 
-button{
+.buttons{
     background-color: rgb(202, 51, 9);
     color: white;
     width: 65%;
@@ -64,11 +64,11 @@ button{
     align-self: center;
     margin-bottom: 1.5vh;
 }
-button:hover {
+.buttons:hover {
     background-color: rgb(0, 203, 3); 
     transform: scale(1.1); 
 }
 
-button:active {
+.buttons:active {
     transform: scale(0.9);
 }
