--- a/src/style/singup.css
+++ b/src/style/singup.css
@@ -1,11 +1,4 @@
-.body{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-   align-items: center;
-   height: 100vh;
-    background-color: rgb(15, 125, 222);
-}
+
 .container1{
 width: 400px;
 height: 500px;
@@ -36,4 +29,29 @@ border-radius: 5px;
 .auth1{
     margin-bottom: 4vh;
     background-color: rgb(48, 227, 42);
+    color: white;
+    width: 65%;
+    margin:2vh;
+    align-self: center;
+    padding: 8px;
+    border-radius: 5px;
+    box-shadow: rgb(3, 43, 92) 0px 1px 1px 0px;
+    transition: background-color 0.1s ease;
 }
+
+.auth1:hover {
+    background-color: rgb(0, 203, 3); 
+    transform: scale(1.1); 
+}
+
+.auth1:active {
+    transform: scale(0.9);
+}
+.inputs{
+    width: 60%;
+    margin:2vh;
+    align-self: center;
+    padding: 8px;
+    margin-bottom: 5vh;
+    border-radius: 5px;
+  }
