--- a/src/style/signin.css
+++ b/src/style/signin.css
@@ -98,6 +98,7 @@
 
 }
 .db_logi{
+    text-decoration: none;
     display: flex;
     margin-top: 7%;
     margin-left: 10%;
@@ -118,4 +119,8 @@
 .dbs_id{
     margin-top: 2%;
     margin-left: 10%;
+}
+.linkStyle{
+    text-decoration: none;
+  
 }
