--- a/src/style/Nav.css
+++ b/src/style/Nav.css
@@ -4,6 +4,7 @@
     display: flex;
     position: fixed;
     background-color: white;
+    box-shadow: 0px 0px 60px 2px grey;
 
 }
 .nav-logo{
@@ -41,3 +42,4 @@ margin: auto;
 justify-content: space-evenly;
 margin-left: .5vh;
 }
+
